argocd/chartdb/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chartdb
  name: chartdb
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    app: chartdb
